--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,14 +1,762 @@
+.order-enter {
+  -webkit-transform: translateX(-120%);
+  transform: translateX(-120%);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  max-height: 0;
+  padding: 0 !important;
+}
+
+.order-enter.order-enter-active {
+  max-height: 60px;
+  padding: 2rem 0 !important;
+}
+
+.order-enter.order-enter-active,
+.order-exit {
+  -webkit-transform: translateX(0);
+  transform: translateX(0);
+}
+
+.order-exit {
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.order-exit.order-exit-active {
+  -webkit-transform: translateX(120%);
+  transform: translateX(120%);
+  padding: 0;
+}
+
+.count-enter {
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  -webkit-transform: translateY(100%);
+  transform: translateY(100%);
+}
+
+.count-enter.count-enter-active,
+.count-exit {
+  -webkit-transform: translateY(0);
+  transform: translateY(0);
+}
+
+.count-exit {
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
+.count-exit.count-exit-active {
+  -webkit-transform: translateY(-100%);
+  transform: translateY(-100%);
+}
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+nav,
+section,
+summary {
+  display: block;
+}
+
+audio,
+canvas,
+video {
+  display: inline-block;
+}
+
+audio:not([controls]) {
+  display: none;
+  height: 0;
+}
+
+[hidden] {
+  display: none;
+}
+
 html {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: sans-serif;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+}
+
+a:focus {
+  outline: thin dotted;
+}
+
+a:active,
+a:hover {
+  outline: 0;
+}
+
+h1 {
+  font-size: 2em;
+}
+
+abbr[title] {
+  border-bottom: 1px dotted;
+}
+
+b,
+strong {
+  font-weight: 700;
+}
+
+dfn {
+  font-style: italic;
+}
+
+mark {
+  background: #ff0;
+  color: #000;
+}
+
+code,
+kbd,
+pre,
+samp {
+  font-family: monospace, serif;
+  font-size: 1em;
+}
+
+pre {
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
+
+q {
+  quotes: 2 1c 2 1d 2 18 2 19;
+}
+
+small {
+  font-size: 80%;
+}
+
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sup {
+  top: -0.5em;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+img {
+  border: 0;
+}
+
+svg:not(:root) {
+  overflow: hidden;
+}
+
+fieldset {
+  border: 1px solid silver;
+  margin: 0 2px;
+  padding: 0.35em 0.625em 0.75em;
+}
+
+button,
+input,
+select,
+textarea {
+  font-family: inherit;
+  font-size: 100%;
+  margin: 0;
+}
+
+button,
+input {
+  line-height: normal;
+}
+
+button,
+html input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+  -webkit-appearance: button;
+  cursor: pointer;
+}
+
+button[disabled],
+input[disabled] {
+  cursor: default;
+}
+
+input[type="checkbox"],
+input[type="radio"] {
+  box-sizing: border-box;
+  padding: 0;
+}
+
+input[type="search"] {
+  -webkit-appearance: textfield;
+  box-sizing: content-box;
+}
+
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+textarea {
+  overflow: auto;
+  vertical-align: top;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+body,
+figure {
+  margin: 0;
+}
+
+button::-moz-focus-inner,
+input::-moz-focus-inner,
+legend {
+  border: 0;
+  padding: 0;
+}
+
+.clearfix:after {
+  visibility: hidden;
+  display: block;
+  font-size: 0;
+  content: " ";
+  clear: both;
+  height: 0;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-family: Open Sans, sans-serif;
+  font-size: 1.8rem;
+}
+
+h1 {
+  font-weight: 900;
+  margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: Source Sans Pro, sans-serif;
+}
+
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 600;
+}
+
+h2 {
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 3rem;
+  font-size: 2.4rem;
+}
+
+h3 {
+  font-size: 2rem;
+}
+
+
+
+header.top .wrap {
+  height: 100%;
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(rgba(61, 26, 22, 0)),
+    to(rgba(61, 26, 22, 0.6))
+  );
+  background-image: linear-gradient(
+    180deg,
+    rgba(61, 26, 22, 0),
+    rgba(61, 26, 22, 0.6)
+  );
+}
+
+header.top .header-content {
+  padding: 4rem 0;
+  margin: 0 4rem;
+}
+
+header.top .header-content .header-rating {
+  padding: 4px 8px;
+  background-color: #ffe033;
+  display: inline-flex;
+  border-radius: 18px;
+  align-items: center;
+  font-size: 1.4rem;
+}
+
+header.top .header-content .header-rating .header-rating_tag {
+  color: #000;
+  margin-right: 5px;
+}
+
+header.top .header-content .header-divider {
+  height: 1px;
+  opacity: 0.2;
+  margin-top: 20px;
+  margin-bottom: 8px;
+  background-color: #fff;
+}
+
+header.top .header-content h1 {
+  font-size: 3.4rem;
+}
+
+header.top .header-content h3 {
+  margin: 0;
+  font-size: 2rem;
+}
+
+header.top .header-content .sub-header {
+  color: red;
+}
+
+.burger-paradise {
+  display: grid;
+  grid-template-columns: 2fr 1fr 1.5fr;
+  grid-gap: 10px;
+  height: 94vh;
+  max-width: 1500px;
+  margin: 2vh auto 0;
+}
+
+.burger-paradise > * {
+  overflow-y: scroll;
+  overflow-x: hidden;
+  border: 1px solid #eee;
+}
+
+.burger-paradise > :first-child {
+  background: #ededed;
+}
+
+.burger-paradise > :nth-child(2) {
+  padding: 2rem 0;
+  overflow-y: hidden;
+  background: #f2f2f2;
+  border-radius: 4px;
+}
+
+.burger-paradise > :last-child {
+  background: #ededed;
+  padding: 2rem;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 2rem;
+}
+
+ul.order li {
+  border-bottom: 1px solid #000;
+  padding: 2rem 0 2rem 0.2rem;
+  display: flex;
+  font-size: 1.4rem;
+  justify-content: space-between;
+  align-items: center;
+}
+
+ul.order li button {
+  border: 0;
+  display: inline;
+  line-height: 1;
+  padding: 0 4px;
+  background: transparent;
+  color: red;
+}
+
+ul.order li button:after {
+  display: none;
+}
+
+ul.order li span.count {
+  position: relative;
+  overflow: hidden;
+  float: left;
+}
+
+ul.order li span.count span {
+  display: inline-block;
+}
+
+.nothingSelected {
+  text-align: center;
+  margin: 0 10px;
+}
+
+.total {
+  font-family: Source Sans Pro, sans-serif;
+  font-weight: 600;
+  border-bottom: 3px solid #000;
+  border-top: 3px double #000;
+}
+
+.total_wrap {
+  padding: 1rem 2rem;
+}
+
+.total_wrap-free {
+  font-size: 1.2rem;
+}
+
+.total_wrap-final {
+  margin-top: 10px;
+}
+
+.total_wrap-cheap {
+  font-weight: 300;
+}
+
+.unavailable {
+  background: #f8d0d2;
+}
+
+.price {
+  font-size: 1.2rem;
+}
+
+.order-title {
+  text-align: center;
+}
+
+.burger-edit {
+  margin-bottom: 20px;
+  border: 2px solid #000;
+  overflow: hidden;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 450px;
+}
+
+.burger-edit input,
+.burger-edit select,
+.burger-edit textarea {
+  width: 50%;
+  padding: 10px;
+  line-height: 1;
+  font-size: 1.2rem;
+  border: 0;
+  border-bottom: 1px solid #000;
+  border-right: 1px solid #000;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-radius: 0;
+  background: #fff;
+}
+
+.burger-edit input:focus,
+.burger-edit select:focus,
+.burger-edit textarea:focus {
+  outline: 0;
+  background: #fef2de;
+}
+
+.burger-edit textarea {
+  width: 100%;
+  min-height: 60px;
+}
+
+.burger-edit input:last-of-type {
+  width: 100%;
+}
+
+.burger-edit button {
+  width: 100%;
+  border: 0;
+  font-size: 1.2rem;
+}
+
+.burger-edit .status {
+  width: 100%;
+}
+
+.menu-burger {
+  display: grid;
+  grid-template-columns: 150px 1fr;
+  grid-gap: 10px;
+  gap: 10px;
+  margin-bottom: 10px;
+  overflow: hidden;
+  background: #fff;
+  padding: 2rem;
+  border-radius: 4px;
+}
+
+.menu-burger p {
+  margin: 5px 0;
+  font-size: 1.6rem;
+}
+
+.menu-burger .burger-name {
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.menu-burger .price {
+  font-size: 1.4rem;
+  justify-content: flex-end;
+  font-family: Open Sans, sans-serif;
+}
+
+.menu-burger img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.buttonOrder {
+  -webkit-transform: skew(-2deg);
+  transform: skew(-2deg);
+}
+
+button,
+input[type="submit"] {
+  text-transform: uppercase;
+  padding: 0.8rem 1.5rem;
+  border: none;
+  background: red;
+  color: #fff;
+  font-size: 1.4rem;
+  font-family: Source Sans Pro, sans-serif;
+  font-weight: 600;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+  position: relative;
+  z-index: 2;
+}
+
+button[disabled],
+input[type="submit"][disabled] {
+  color: #d12028;
+  background: #fff;
+  -webkit-transform: rotate(-10deg) scale(1.5) translateX(40%) translateY(-50%);
+  transform: rotate(-10deg) scale(1.5) translateX(40%) translateY(-50%);
+  border: 1px solid #d12028;
+}
+
+button[disabled]:hover,
+input[type="submit"][disabled]:hover {
+  color: #d12028;
+  cursor: not-allowed;
+}
+
+button[disabled]:after,
+input[type="submit"][disabled]:after {
+  display: none;
+}
+
+button:after,
+input[type="submit"]:after {
+  content: "";
+  z-index: -1;
+  display: block;
+  background: #000;
+  position: absolute;
+  width: 0;
+  height: 100%;
+  left: 0;
+  top: 0;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+button:focus,
+button:hover,
+input[type="submit"]:focus,
+input[type="submit"]:hover {
+  color: #fff;
+  outline: 0;
+}
+
+button:focus:after,
+button:hover:after,
+input[type="submit"]:focus:after,
+input[type="submit"]:hover:after {
+  width: 100%;
+}
+
+button.warning:after,
+input[type="submit"].warning:after {
+  background: #d12028;
+}
+
+button.success:after,
+input[type="submit"].success:after {
+  background: #2dc22d;
+}
+
+button.facebook,
+button.github,
+button.twitter,
+input[type="submit"].facebook,
+input[type="submit"].github,
+input[type="submit"].twitter {
+  border: 0;
+  display: block;
+  margin-bottom: 2rem;
+  width: 100%;
+  color: #fff;
+  padding: 2rem;
+}
+
+button.github,
+input[type="submit"].github {
+  background: #82d465;
+}
+
+button.github:after,
+input[type="submit"].github:after {
+  background: #5cc437;
+}
+
+button.facebook,
+input[type="submit"].facebook {
+  background: #3864a3;
+}
+
+button.facebook:after,
+input[type="submit"].facebook:after {
+  background: #2d5082;
+}
+
+button.twitter,
+input[type="submit"].twitter {
+  background: #5ea9dd;
+}
+
+button.twitter:after,
+input[type="submit"].twitter:after {
+  background: #2c8dd0;
+}
+
+.restaurant_select {
+  background: #fff;
+  max-width: 460px;
+  margin: 200px auto;
+  padding: 40px;
+  position: relative;
+  box-shadow: 0 0 0 10px hsla(0, 0%, 100%, 0.1), 0 0 10px rgba(0, 0, 0, 0.18);
 }
 
 .restaurant_select_top {
-  border: 1px solid gray;
-  width: 220px;
-  text-align: center;
-}
-.restaurant_select_top-header {
-  margin: 30px;
+  position: relative;
+  max-width: 380px;
+  display: flex;
+  justify-content: space-between;
 }
 
-button {width: 220px;height: 40px;background-color:tomato; color:white;margin:10px 0 0 0;}
+.restaurant_select_top-header {
+  font-size: 2.4rem;
+  text-transform: uppercase;
+  margin: 0;
+  line-height: 1.4;
+  cursor: pointer;
+}
+
+.restaurant_select button {
+  margin-top: 10px;
+}
+
+.restaurant_select .arrow_picker {
+  display: inline-block;
+  vertical-align: middle;
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  padding-top: 2px;
+  width: 14px;
+}
+
+.restaurant_select .arrow_picker-up {
+  background: url(/src/static/media/up.svg) no-repeat;
+  background-size: auto;
+  background-size: 100% auto;
+  width: 13px;
+  height: 12px;
+  top: 0;
+  cursor: pointer;
+  margin-bottom: 5px;
+}
+
+.restaurant_select .arrow_picker-down {
+  background: url(/src/static/media/down.svg) no-repeat;
+  background-size: auto;
+  background-size: 100% auto;
+  width: 13px;
+  height: 12px;
+  cursor: pointer;
+}
+
+.restaurant_select_bottom {
+  position: absolute;
+  padding: 10px 20px;
+  border: 2px solid #000;
+  top: 85px;
+  left: 40px;
+  min-width: 350px;
+  background: #fff;
+}
+
+.restaurant_select_bottom ul {
+  padding: 0 0 0 10px;
+}
+
+.restaurant_select_bottom ul li {
+  cursor: pointer;
+  list-style: none;
+  padding: 5px 0;
+}
+
+.restaurant_select_bottom ul li:before {
+  content: "■";
+  margin-right: 0.5rem;
+  color: red;
+}
+
+/*# sourceMappingURL=main.824be00e.chunk.css.map */
